wip-fix: consider feedback

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -106,8 +106,12 @@
 \newcommand{\evaluator}[0]{\module{Evaluator}}
 \newcommand{\promptoptimizer}[0]{\module{Prompt Optimizer}}
 \newcommand{\elementstore}[0]{\module{Element Store}}
+\newcommand{\elementsores}{\elementstore's}
 \newcommand{\samplingstrategy}[0]{\module{Sample Strategy}}
 \newcommand{\reductor}[0]{\module{Reductor}}
 \newcommand{\cache}[0]{\module{Cache}}
 \newcommand{\scorer}[0]{\module{Scorer}}
+\newcommand{\classifier}{\module{Classifier}}
+\newcommand{\classifiers}{\classifier's}
+\newcommand{\retrievalstrategy}{\module{Retrieval Strategy}}
 \newcommand{\method}[1]{\texttt{#1}\xspace}
