--- a/sections/implementation.tex
+++ b/sections/implementation.tex
@@ -13,7 +13,9 @@
 \label{ch:Implementation}
 
 This chapter describes the implementation of the proposed features to the \LiSSAf to optimize classification prompts for fixed datasets.
-To achieve this goal, a new \promptoptimizer module is added to the \LiSSA pipeline.
+As outlined in \autoref{ch:Approach}, the goal is to optimize prompts for a given set of \TLR tasks on a fixed dataset.
+\Todo{Link to subsectsion in Approach}
+To achieve this goal, a new \promptoptimizer component is added to the \LiSSA pipeline.
 This module can be combined with further optional \metric and \evaluator modules to enable a flexible and reusable architecture.
 \autoref{fig:component_diagramm} provides an overview of the components involved in this implementation.
 
@@ -23,51 +25,6 @@ This module can be combined with further optional \metric and \evaluator modules
     \caption{Overview of the major new components involved in the implementation}
     \label{fig:component_diagramm}
 \end{figure}
-
-\section{Prompt Optimizer Module}
-\label{sec:impl:prompt_optimizer_module}
-
-The prompt optimizer module provides implementations for the actual prompt optimization.
-The only method this module is required to implement is the \method{optimize} \Todo{Check if this method is still named the same} method.
-It requires the source and target \elementstore created in the previous pipeline steps.
-They contain the artifacts to be linked.
-The module will be instantiated with a set of configuration parameters, again following the format of the \LiSSAf.
-A factory class is used to create the module based on the configuration.
-Furthermore, the \metric and \evaluator modules are provided to the respective constructors if required.
-
-\begin{figure}
-    \centering
-    \fontsize{8}{10}\selectfont
-    \includegraphics[width=\textwidth]{graphics/class_diagrams/optimizer}
-    \caption{The new \promptoptimizer module and its implementations}
-    \label{fig:optimizer_module_diagramm}
-\end{figure}
-
-As seen in \autoref{fig:optimizer_module_diagramm}, the \promptoptimizer module will typically use the \LLM to evaluate different prompts.
-\Todo{It has not been seen...}
-
-Many implementations of the \promptoptimizer module will require sampling strategies as a heuristic to reduce the number of calls to the \LLM.
-\Todo{Is heuristic the right word here?}
-The \samplingstrategy submodule provides different strategies to select a sublist of comparable elements from a collection.
-The strategies can be instantiated with configuration parameters and are used by the \promptoptimizer module.
-This way, sampling strategies can be swapped easily without changing the actual optimization logic.
-The random sampler uses a fixed random seed to ensure reproducibility of results.
-
-\begin{figure}
-    \centering
-    \fontsize{8}{10}\selectfont
-    \includegraphics[width=\textwidth]{graphics/class_diagrams/sample_strategy}
-    \caption{The new \samplingstrategy submodule and its implementations}
-    \label{fig:sampling_strategy_diagramm}
-\end{figure}
-
-In \autoref{fig:sampling_strategy_diagramm}, the sampling strategy submodule is depicted.
-Currently, three different strategies are implemented.
-\begin{itemize}
-    \item The \method{ShuffledFirstSampler} will shuffle the input list using the \method{RandomGenerator} and return the first elements.
-    \item The \method{OrderedFirstSampler} will sort the input list and return the first elements.
-    \item The \method{FirstSampler} will return the first elements of the input list.
-\end{itemize}
 
 \section{Metric Module}
 \label{sec:impl:metric_module}
@@ -129,11 +86,76 @@ The \ucb evaluator can be configured with a random seed to ensure reproducibilit
 Other implementations seen in \autoref{fig:evaluator_module_diagramm} are the \method{BruteForceEvaluator}, which will use all tasks to evaluate the prompt.
 The \method{MockEvaluator} is used for testing purposes and will return a fixed score.
 
+\section{Prompt Optimizer Module}
+\label{sec:impl:prompt_optimizer_module}
+
+The prompt optimizer component provides implementations for the actual prompt optimization.
+Concrete objects will be instantiated with a set of configuration parameters, again following the format of the \LiSSAf.
+A factory class is used to create the object based on the configuration.
+Furthermore, the \metric and \evaluator modules are provided to the respective constructors if required.
+The \metric component is used to score the quality of a prompt on a given set of tasks.
+The \evaluator component is used to select a subset of tasks to evaluate the prompt on.
+This compoent is designed to be used in the \LiSSA evaluation pipeline after the preprocessing of artifacts into \elementstore's is completed.
+These steps are already part of the existing \LiSSA framework for evaluation.
+They are explained in more detail in \autoref{sec:foundations:lissa}.
+\newcommand{\optimizermethod}{\method{optimize}}
+\Todo{Check if this method is still named the same}
+The only functionality required in the \promptoptimizer interface is the \optimizermethod method.
+The \optimizermethod requires the source and target \elementstores created in the previous pipeline steps as arguments.
+Using the retrieval strategy of the target \elementstore a set of candidate pairs of elements is created.
+This set will also be referred to as the training data, on which the prompt will be optimized.
+
+The prompt to be optimized is provided in the module configuration during the optimizers' instantiation.
+The method will return the optimized prompt as a string.
+When \promptoptimizer implementations utilize \classifiers, the training data or subsets will be passed on to the classification method.
+Utilizing caching for the \LLM queries, which is implemented for \LiSSAs classifiers, the optimization is deterministic and reproducible.
+All further implmentations should also be deterministic and reproducible.
+Configuration parameters such as random seeds can be utilized.
+
+\begin{figure}
+    \centering
+    \fontsize{8}{10}\selectfont
+    \includegraphics[width=\textwidth]{graphics/class_diagrams/optimizer}
+    \caption{The new \promptoptimizer module and its implementations}
+    \label{fig:optimizer_module_diagramm}
+\end{figure}
+
+As seen in \autoref{fig:optimizer_module_diagramm}, the \promptoptimizer module will typically use the \LLM to evaluate different prompts.
+\Todo{It has not been seen...}
+
+Many implementations of the \promptoptimizer module will require sampling strategies as a heuristic to reduce the number of calls to the \LLM.
+\Todo{Is heuristic the right word here?}
+The \samplingstrategy submodule provides different strategies to select a sublist of comparable elements from a collection.
+The strategies can be instantiated with configuration parameters and are used by the \promptoptimizer module.
+This way, sampling strategies can be swapped easily without changing the actual optimization logic.
+The random sampler uses a fixed random seed to ensure reproducibility of results.
+
+\begin{figure}
+    \centering
+    \fontsize{8}{10}\selectfont
+    \includegraphics[width=\textwidth]{graphics/class_diagrams/sample_strategy}
+    \caption{The new \samplingstrategy submodule and its implementations}
+    \label{fig:sampling_strategy_diagramm}
+\end{figure}
+
+In \autoref{fig:sampling_strategy_diagramm}, the sampling strategy submodule is depicted.
+Currently, three different strategies are implemented.
+\begin{itemize}
+    \item The \method{ShuffledFirstSampler} will shuffle the input list using the \method{RandomGenerator} and return the first elements.
+    \item The \method{OrderedFirstSampler} will sort the input list and return the first elements.
+    \item The \method{FirstSampler} will return the first elements of the input list.
+\end{itemize}
+
+
 \section{LiSSA Pipeline Integration}
 \label{sec:impl:lissa_integration}
 \Todo{Can you use \acs{LiSSA} in the title but without the quote?}
 The new modules are integrated into the \LiSSA pipeline.
 A new command was added to the \LiSSA command-line interface to run the prompt optimization.
 The command will read the configuration file and create the required modules using their constructors or factories, respectively.
+To do so an evaluation pipeline object is created and relevant modules will be retrieved from it.
+This includes the classifier, aggregator, trace link id postprocessor as well as the source and target \elementstore's.
+The classifier component is used to classify a pair of elements having a \TL or not.
+
 While the optimization pipeline, as a standalone, is independent of the regular evaluation pipeline, they can be combined.
 This is achieved by feeding the optimized prompt from the optimization pipeline into the evaluation pipeline, indicated by a separate configuration.
