--- a/tables/FeedbackOptimizer.tex
+++ b/tables/FeedbackOptimizer.tex
@@ -1,5 +1,5 @@
 %! Author = Daniel Schwab
-%! Date = 2025-08-30
+%! Date = 2025-10-12
 \providecommand{\CMOneNASA}{CMOneNASA}
 \providecommand{\Dronology}{Dronology}
 \providecommand{\GANNT}{GANNT}
@@ -8,55 +8,55 @@
 \providecommand{\Avg}{Avg}
 \providecommand{\WeightedAvg}{WeightedAvg}
 
-\begin{tabularx}{\hsize}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z }
+\begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{feedback (\iter=1, \feed=3)}  & \multicolumn{ 3 }{c}{feedback (\iter=5, \feed=3)}  & \multicolumn{ 3 }{c}{feedback (\iter=10, \feed=5)}                                                                                          \\
-    \cmidrule(lr){ 3-5 }
-    \cmidrule(lr){ 6-8 }
-    \cmidrule(lr){ 9-11 }
-    \cmidrule(lr){ 12-14 }
-    &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 2 }{c}{KISS-Original}  & \multicolumn{ 2 }{c}{feedback (\iter=1, \feed=3)}  & \multicolumn{ 2 }{c}{feedback (\iter=5, \feed=3)}  & \multicolumn{ 2 }{c}{feedback (\iter=10, \feed=5)}                                                                                          \\
+    \cmidrule(lr){ 3-4 }
+    \cmidrule(lr){ 5-6 }
+    \cmidrule(lr){ 7-8 }
+    \cmidrule(lr){ 9-10 }
+    &                            & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini           \\
     \midrule
     \multirow{ 3 }{*}{\rotatebox{90}{\CMOneNASA}}
-    & P.    & 0.349    & 0.337    & 0.33    & 0.341    & \textbf{ 0.382 }    & 0.33    & 0.345    & 0.372    & 0.33    & 0.333    & 0.367    & 0.364 \\
-    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.444 \\
-    & F\textsubscript{1}    & 0.453    & 0.443    & 0.436    & 0.446    & \textbf{ 0.479 }    & 0.436    & 0.45    & 0.472    & 0.436    & 0.439    & 0.468    & 0.4 \\
+    & P.    & 0.349    & 0.341    & 0.408    & 0.382    & 0.394    & 0.364    & 0.349    & \textbf{ 0.5 } \\
+    & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.578    & 0.578    & 0.267    & \textbf{ 0.644 }    & 0.244 \\
+    & F\textsubscript{1}    & 0.453    & 0.446    & \textbf{ 0.5 }    & 0.46    & 0.468    & 0.308    & 0.453    & 0.328 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\Dronology}}
-    & P.    & 0.395    & 0.387    & 0.382    & 0.393    & 0.413    & 0.366    & 0.406    & 0.396    & 0.333    & 0.41    & 0.384    & \textbf{ 1.0 } \\
-    & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.682    & 0.691    & 0.686    & 0.536    & 0.691    & 0.691    & 0.245    & 0.691    & 0.645    & 0.0 \\
-    & F\textsubscript{1}    & 0.504    & 0.498    & 0.489    & 0.501    & \textbf{ 0.515 }    & 0.435    & 0.512    & 0.503    & 0.283    & 0.514    & 0.481    & 0.0 \\
+    & P.    & 0.394    & 0.386    & \textbf{ 0.549 }    & 0.386    & 0.45    & 0.387    & 0.405    & 0.413 \\
+    & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.668    & \textbf{ 0.695 }    & 0.691    & 0.691    & 0.691    & 0.659 \\
+    & F\textsubscript{1}    & 0.503    & 0.497    & \textbf{ 0.602 }    & 0.497    & 0.545    & 0.496    & 0.511    & 0.508 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\GANNT}}
-    & P.    & 0.552    & 0.544    & 0.561    & 0.544    & 0.561    & 0.561    & 0.552    & 0.561    & \textbf{ 0.562 }    & 0.561    & 0.544    & 0.558 \\
-    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.529    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.426 \\
-    & F\textsubscript{1}    & 0.548    & 0.544    & \textbf{ 0.552 }    & 0.544    & \textbf{ 0.552 }    & \textbf{ 0.552 }    & 0.548    & \textbf{ 0.552 }    & 0.545    & \textbf{ 0.552 }    & 0.544    & 0.483 \\
+    & P.    & 0.552    & 0.544    & 0.544    & 0.578    & 0.544    & \textbf{ 0.617 }    & 0.544    & 0.541 \\
+    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.485 \\
+    & F\textsubscript{1}    & 0.548    & 0.544    & 0.544    & 0.561    & 0.544    & \textbf{ 0.578 }    & 0.544    & 0.512 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\ModisDataset}}
-    & P.    & 0.212    & 0.212    & 0.224    & 0.423    & 0.224    & 0.345    & 0.31    & 0.262    & \textbf{ 0.667 }    & 0.579    & 0.474    & 0.147 \\
-    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.244    & 0.22    & \textbf{ 0.268 }    & 0.146    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 } \\
-    & F\textsubscript{1}    & 0.237    & 0.237    & 0.244    & 0.328    & 0.244    & 0.286    & 0.257    & 0.265    & 0.24    & \textbf{ 0.367 }    & 0.3    & 0.19 \\
+    & P.    & 0.212    & 0.212    & 0.391    & 0.289    & \textbf{ 0.667 }    & 0.346    & 0.5    & 0.234 \\
+    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.22    & \textbf{ 0.268 }    & 0.146    & 0.22    & \textbf{ 0.268 }    & \textbf{ 0.268 } \\
+    & F\textsubscript{1}    & 0.237    & 0.237    & 0.281    & 0.278    & 0.24    & 0.269    & \textbf{ 0.349 }    & 0.25 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\WARC}}
-    & P.    & 0.394    & 0.38    & 0.377    & 0.396    & \textbf{ 0.454 }    & 0.4    & 0.394    & 0.412    & 0.376    & 0.403    & 0.381    & 0.38 \\
-    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.684    & \textbf{ 0.699 }    & 0.684    & 0.059    & \textbf{ 0.699 }    & 0.691    & 0.691    & \textbf{ 0.699 }    & 0.684    & 0.676 \\
-    & F\textsubscript{1}    & 0.504    & 0.492    & 0.486    & 0.505    & \textbf{ 0.545 }    & 0.103    & 0.504    & 0.516    & 0.487    & 0.511    & 0.489    & 0.487 \\
+    & P.    & 0.394    & 0.38    & 0.388    & 0.382    & 0.397    & 0.397    & 0.399    & \textbf{ 0.462 } \\
+    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.691    & \textbf{ 0.699 }    & 0.691    & \textbf{ 0.699 }    & 0.676 \\
+    & F\textsubscript{1}    & 0.504    & 0.492    & 0.499    & 0.492    & 0.507    & 0.504    & 0.508    & \textbf{ 0.549 } \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\Avg}}
-    & P.    & 0.38    & 0.372    & 0.375    & 0.419    & 0.407    & 0.4    & 0.401    & 0.401    & 0.454    & 0.457    & 0.43    & \textbf{ 0.49 } \\
-    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.564    & 0.569    & 0.565    & 0.405    & 0.56    & 0.568    & 0.451    & 0.569    & 0.547    & 0.363 \\
-    & F\textsubscript{1}    & 0.449    & 0.443    & 0.441    & 0.465    & 0.467    & 0.362    & 0.454    & 0.462    & 0.398    & \textbf{ 0.477 }    & 0.456    & 0.312 \\
+    & P.    & 0.38    & 0.373    & 0.456    & 0.403    & \textbf{ 0.49 }    & 0.422    & 0.439    & 0.43 \\
+    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.555    & 0.555    & 0.532    & 0.483    & 0.569    & 0.466 \\
+    & F\textsubscript{1}    & 0.449    & 0.443    & \textbf{ 0.485 }    & 0.458    & 0.461    & 0.431    & 0.473    & 0.429 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{\WeightedAvg}}
-    & P.    & 0.397    & 0.388    & 0.387    & 0.412    & 0.426    & 0.396    & 0.409    & 0.409    & 0.402    & 0.435    & 0.41    & \textbf{ 0.651 } \\
-    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.627    & 0.635    & 0.629    & 0.396    & 0.632    & 0.633    & 0.429    & 0.635    & 0.608    & 0.298 \\
-    & F\textsubscript{1}    & 0.484    & 0.477    & 0.472    & 0.489    & \textbf{ 0.503 }    & 0.35    & 0.489    & 0.491    & 0.382    & 0.5    & 0.476    & 0.245 \\
+    & P.    & 0.396    & 0.388    & \textbf{ 0.48 }    & 0.402    & 0.461    & 0.415    & 0.425    & 0.436 \\
+    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.622    & 0.629    & 0.62    & 0.596    & 0.635    & 0.572 \\
+    & F\textsubscript{1}    & 0.483    & 0.477    & \textbf{ 0.532 }    & 0.483    & 0.503    & 0.474    & 0.496    & 0.483 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
 \end{tabularx}
