--- a/thesis.tex
+++ b/thesis.tex
@@ -94,7 +94,7 @@
 \frontmatter
 
 %TODO: Include in final version
-%\input{sections/declaration}
+\input{sections/declaration}
 
 \setcounter{page}{1}
 \pagenumbering{roman}
@@ -112,7 +112,7 @@
 %% - sections/abstract
 
 %TODO: Write an abstract
-%\includeabstract
+\includeabstract
 
 %% ------------------------
 %% |   Table of Contents  |
