--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -13,9 +13,9 @@
 \chapter{Conclusion}
 \label{ch:Conclusion}
 
-This thesis presented an \apo approach using \llms to optimize prompts for \RtR \tlr tasks in the \LiSSAF.
+This thesis presented an \APO approach using \LLMs to optimize prompts for \RtR \TLR tasks in the \LiSSAF.
 To realise this, a new prompt optimization model has been developed for the \LiSSAF.
 
-The approach was evaluated on up to five datasets from the \RtR domain using three distinct \llms.
-The results showed that the proposed approach can slightly improve the performance of \tlr tasks compared to a baseline prompt.
+The approach was evaluated on up to five datasets from the \RtR domain using three distinct \LLMs.
+The results showed that the proposed approach can slightly improve the performance of \TLR tasks compared to a baseline prompt.
 However, the improvements were not as significant as initially expected.
