Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -78,9 +78,9 @@
 \newcommand{\LiSSAs}[0]{\acp{LiSSA}\xspace}
 \newcommand{\LISSA}[0]{\LiSSA}
 \newcommand{\LiSSAf}[0]{\ac{LiSSA} framework\xspace}
-\newcommand{\LISSAf}[0]{\LISSAf}
-\newcommand{\LiSSAF}[0]{\LISSAf}
-\newcommand{\LISSAF}[0]{\LISSAf}
+\newcommand{\LISSAf}[0]{\LiSSAf}
+\newcommand{\LiSSAF}[0]{\LiSSAf}
+\newcommand{\LISSAF}[0]{\LiSSAf}
 \newcommand{\RtR}[0]{\ac{Req2Req}\xspace}
 \newcommand{\API}[0]{\ac{API}\xspace}
 \newcommand{\codellama}[0]{\ac{codellama}\xspace}
