--- a/preamble.sty
+++ b/preamble.sty
@@ -21,6 +21,7 @@
 %% You can also use other colors .. or the KIT colors
 \RequirePackage{footnote}
 \RequirePackage{todo}
+\RequirePackage{scrhack}
 
 \newcommand{\citewithauthor}[1]{\citeauthor{#1}~\cite{#1}\xspace}
 \newcommand{\directQuote}[3][]{\guillemotright#2\guillemotleft~\cite[#1]{#3}\xspace}
