--- a/thesis.tex
+++ b/thesis.tex
@@ -111,7 +111,7 @@
 %% - sections/abstract
 
 %TODO: Write an abstract
-\includeabstract
+%\includeabstract
 
 %% ------------------------
 %% |   Table of Contents  |
@@ -127,12 +127,12 @@
 
 \mainmatter
 
-\input{sections/introduction}
-\input{sections/foundations}
-\input{sections/related_work}
-\input{sections/approach}
-\input{sections/implementation}
-\input{sections/evaluation}
+%\input{sections/introduction}
+%\input{sections/foundations}
+%\input{sections/related_work}
+%\input{sections/approach}
+%\input{sections/implementation}
+%\input{sections/evaluation}
 \input{sections/conclusion}
 
 
