--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -274,7 +274,6 @@ Like in \autoref{subsec:Evaluation:naive_optimization:systematic-evaluation-resu
 Noteworthy is that \llama once again fails to comply with the instruction to leave the output format as \textquotesingle yes \textquotesingle or \textquotesingle no \textquotesingle for the dronology dataset. \Todo{Include in Appendix?}
 Also, compared to the naive optimization approach in \autoref{tab:naive_optimization}, more iteration steps actually provide a benefit.
 
-\begin{landscape}
     \begin{table}
         \centering
         %TODO: Careful, currently the tabularx width is manually replaced with \hsize in the table to adjust to landscape mode
@@ -284,7 +283,6 @@ Also, compared to the naive optimization approach in \autoref{tab:naive_optimiza
         \caption{Naive prompt optimization approach considering previous misclassified \TLs}
         \label{tab:feedback_optimizer}
     \end{table}
-\end{landscape}
 
 
 \section{Varying the Optimization Prompt}
@@ -346,7 +344,6 @@ The results are quite similar to the naive feedback optimization approach in \au
 The \fone scores are slightly higher on average.
 A prevalent issue remains that more iteration steps often do not yield better results.
 
-\begin{landscape}
     % Todo: Careful, currently the tabularx width is manually replaced with \hsize in the table to adjust to landscape mode
     \begin{table}
         \centering
@@ -356,14 +353,13 @@ A prevalent issue remains that more iteration steps often do not yield better re
         \caption{Naive prompt optimization approach using the optimization prompt by \citewithauthor{zadenoori2025AutomaticPrompt}}
         \label{tab:zadenoori_optimization}
     \end{table}
-\end{landscape}
 
 \section{Gradient Descent Based Automatic Prompt Optimization }
 
-The last pormpt optimization algorithm implemented during this thesis is based on work by \citewithauthor{pryzant2023AutomaticPrompt}.
+The last prompt optimization algorithm implemented during this thesis is based on work by \citewithauthor{pryzant2023AutomaticPrompt}.
 They have implemented this algorithm in Python.
 I adapted it to the \LiSSAf for use in the optimization module.
-As this algorithm is the most sophisticated one it is expected to yield the best results.
+As this algorithm is the most sophisticated one, it is expected to yield the best results.
 The implementation has many configurable parameters.
 In this evaluation, not every parameter will be altered.
 Instead, the default values as by \citeauthor{pryzant2023AutomaticPrompt}'s implementation will be used.
