fix: solve cyclic definition for \LiSSAF
 - resolve "LaTeX Error: Command `\Bbbk' already defined" error by including amssymb in sdqthesis.clse

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -35,15 +35,15 @@
 \DeclareAcronym{ToT}{short=ToT, long=tree-of-thought}
 \DeclareAcronym{CoT}{short=CoT, long=chain-of-thought}
 \DeclareAcronym{APO}{short=APO, long=automatic prompt optimization}
-\DeclareAcronym{APE}{short=APE, long=automatic prompt engineering, long-german=Automatic Prompt Engineering}
-\DeclareAcronym{LLM}{short=LLM, long=large language model, long-german=Großes Sprachmodell}
-\DeclareAcronym{TLR}{short=TLR, long = traceability link recovery, long-german=Traceability Link Recovery}
-\DeclareAcronym{TL}{short=TL, long = traceability link, long-german=Traceability Link}
+\DeclareAcronym{APE}{short=APE, long=automatic prompt engineering}
+\DeclareAcronym{LLM}{short=LLM, long=large language model}
+\DeclareAcronym{TLR}{short=TLR, long = traceability link recovery}
+\DeclareAcronym{TL}{short=TL, long = traceability link}
 \DeclareAcronym{ProTeGi}{short=ProTeGi, long = Prompt Optimization with Textual Gradients}
-\DeclareAcronym{IR}{short=IR, long = information retrieval, long-german=Information Retrieval}
+\DeclareAcronym{IR}{short=IR, long = information retrieval}
 \DeclareAcronym{KISS}{short=KISS, long = keep it short and simple}
 \DeclareAcronym{LiSSA}{short=LiSSA, long = Linking Software System Artifacts, cite=fuchss2025LiSSAGeneric}
-\DeclareAcronym{Req2Req}{short=Req2Req, long = requiremens-to-requirements, long-german=Requirements-to-Requirements}
+\DeclareAcronym{Req2Req}{short=Req2Req, long = requiremens-to-requirements}
 \DeclareAcronym{API}{short=API, long = application programming interface}
 \DeclareAcronym{codellama}{short=codellama, long = \texttt{codellama:13b}}
 \DeclareAcronym{llama}{short=llama, long = \texttt{llama3.1:8b}}
@@ -78,9 +78,9 @@
 \newcommand{\LiSSAs}[0]{\acp{LiSSA}\xspace}
 \newcommand{\LISSA}[0]{\LiSSA}
 \newcommand{\LiSSAf}[0]{\ac{LiSSA} framework\xspace}
-\newcommand{\LISSAf}[0]{\LISSAf}
-\newcommand{\LiSSAF}[0]{\LISSAf}
-\newcommand{\LISSAF}[0]{\LISSAf}
+\newcommand{\LISSAf}[0]{\LiSSAf}
+\newcommand{\LiSSAF}[0]{\LiSSAf}
+\newcommand{\LISSAF}[0]{\LiSSAf}
 \newcommand{\RtR}[0]{\ac{Req2Req}\xspace}
 \newcommand{\API}[0]{\ac{API}\xspace}
 \newcommand{\codellama}[0]{\ac{codellama}\xspace}
