--- a/thesis.bib
+++ b/thesis.bib
@@ -179,6 +179,14 @@
   langid = {ngerman}
 }
 
+@article{fuchss2025RetrievalStudy,
+  title = {Beyond {{Retrieval}}: {{A Study}} of {{Using LLM Ensembles}} for {{Candidate Filtering}} in {{Requirements Traceability}}},
+  author = {Fuchß, Dominik and Schwedt, Stefan and Keim, Jan and Hey, Tobias},
+  date = {2025-09-06},
+  doi = {10.5445/IR/1000183058},
+  langid = {english}
+}
+
 @article{hayes2006AdvancingCandidate,
   title = {Advancing Candidate Link Generation for Requirements Tracing: The Study of Methods},
   shorttitle = {Advancing Candidate Link Generation for Requirements Tracing},
