--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -15,7 +15,8 @@
 
 This thesis presented an \APO approach using \LLMs to optimize prompts for \RtR \TLR tasks in the \LiSSAF.
 To realize this, a new prompt optimization model has been developed for the \LiSSAF.
-
 The approach was evaluated on up to five datasets from the \RtR domain using three distinct \LLMs.
-The results showed that the proposed approach can slightly improve the performance of \TLR tasks compared to a baseline prompt.
+The results showed that the proposed approach can slightly improve the performance of \TLR tasks compared to the baseline classification prompts currently used in the \LiSSAF.
 However, the improvements were not as significant as initially expected.
+Importantly, it was demonstrated that the singular best performing optimized prompt for a dataset also performed well on other datasets of the same domain.
+This indicates that the optimized prompts can be used as fixed classification prompts in further work, even if the \APE piepline is not applied.
