--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -54,6 +54,7 @@ It will be dynamically adjusted when actual implementations exist and are ready 
 
 \subsection{Datasets}
 \label{approach:sec:datasets}
+\Todo{Remove subsec heading}
 The datasets used for evaluation will be the same as in \citewithauthor{hey2025RequirementsTraceability}.
 
 
