--- a/thesis.bib
+++ b/thesis.bib
@@ -282,6 +282,19 @@
   keywords = {Information retrieval,Modeling,Natural language processing,Software Architecture Documentation,Trace link recovery}
 }
 
+@inproceedings{keim2023DetectingInconsistencies,
+  title = {Detecting {{Inconsistencies}} in {{Software Architecture Documentation Using Traceability Link Recovery}}},
+  booktitle = {2023 {{IEEE}} 20th {{International Conference}} on {{Software Architecture}} ({{ICSA}})},
+  author = {Keim, Jan and Corallo, Sophie and Fuchß, Dominik and Koziolek, Anne},
+  date = {2023-03},
+  pages = {141--152},
+  doi = {10.1109/ICSA56044.2023.00021},
+  url = {https://ieeexplore.ieee.org/abstract/document/10092702},
+  urldate = {2025-10-13},
+  eventtitle = {2023 {{IEEE}} 20th {{International Conference}} on {{Software Architecture}} ({{ICSA}})},
+  keywords = {Adaptation models,Benchmark testing,Consistency,Deep learning,Documentation,Inconsistency Detection,Maintenance engineering,Software architecture,Software engineering,Traceability Link Recovery,Training}
+}
+
 @inproceedings{khattab2023DSPyCompiling,
   title = {{{DSPy}}: {{Compiling Declarative Language Model Calls}} into {{State-of-the-Art Pipelines}}},
   shorttitle = {{{DSPy}}},
